tests/compile-fail/fn_generics.stderr
error: the trait 'Greeter' cannot be implemented for Fn-traits: generic arguments are not allowed
 --> tests/compile-fail/fn_generics.rs:7:14
  |
7 |     fn greet<T: Display>(&self, name: T);
  |              ^^^^^^^^^^

error[E0412]: cannot find type `T` in this scope
 --> tests/compile-fail/fn_generics.rs:7:39
  |
5 | #[auto_impl(Fn)]
  | ---------------- similarly named type parameter `U` defined here
6 | trait Greeter {
7 |     fn greet<T: Display>(&self, name: T);
  |                                       ^ help: a type parameter with a similar name exists: `U`
